--- a/app/partials/directives/ms-multiplication.html
+++ b/app/partials/directives/ms-multiplication.html
@@ -1,4 +1,16 @@
-<span ng-hide="mathdisplay">{{inenglishfirst}}</span><span ng-hide="mathdisplay" class="bigger"> &sdot; </span><span ng-hide="mathdisplay">{{inenglishsecond}}</span>
+<table>
+	<tr style="height:1.5em;">
+    	<td>
+			<span ng-hide="mathdisplay">{{inenglishfirst}}</span>
+        </td>
+        <td style="vertical-align: center;">
+            <span ng-hide="mathdisplay" class="multiply-dot"> &sdot; </span>
+        </td>
+        <td>
+            <span ng-hide="mathdisplay">{{inenglishsecond}}</span>
+        </td>
+    </tr>
+</table>
 <span>
 	<table>
     	<tr>
