Add <ms-find-lcm> wizard workbook step.

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -5,6 +5,7 @@
 @import 'directives/ms-div-wholes.css';
 @import 'directives/ms-exponent.css';
 @import 'directives/ms-fraction.css';
+@import 'directives/ms-find-lcm.css';
 @import 'directives/ms-group.css';
 @import 'directives/ms-input.css';
 @import 'directives/ms-placevalue.css';
