Completed fix of problem 2a.2 all help and button groups work and are laid out correctly

--- a/app/css/directives/general.css
+++ b/app/css/directives/general.css
@@ -18,3 +18,7 @@
 .blue-text{
     color: #0088cc;
 }
+/* add margin to avoid charts that are wider than the problem panel   */
+.buttonsright {
+	margin-left:50px;
+}
