all problmData work

--- a/app/css/directives/general.css
+++ b/app/css/directives/general.css
@@ -6,7 +6,7 @@
 }
 
 /* add paddin and set width on input box (16.4 proportion-application)*/
-.proportion-application{
+.proportion-application .answerx{
     padding: 0 0 0 20px;
 }
 .proportion-application input{
