fix buttons 2A.2, float graphs right

--- a/app/css/directives/general.css
+++ b/app/css/directives/general.css
@@ -20,5 +20,5 @@
 }
 /* add margin to avoid charts that are wider than the problem panel   */
 .buttonsright {
-	margin-left:50px;
+	float:right;
 }
