--- a/app/css/directives/general.css
+++ b/app/css/directives/general.css
@@ -5,6 +5,10 @@
     text-align: center;
 }
 
+.comma-size {
+	font-size:150%;
+}
+
 /* add paddin and set width on input box (16.4 proportion-application)*/
 .proportion-application .answerx{
     padding: 0 0 0 20px;
