fixes #8, enlarged comma in help of 1_1; also enlarged decimal in help of 12_1

--- a/app/css/directives/general.css
+++ b/app/css/directives/general.css
@@ -9,6 +9,10 @@
 	font-size:150%;
 }
 
+.decimal-size {
+	font-size:125%;
+}
+
 /* add paddin and set width on input box (16.4 proportion-application)*/
 .proportion-application .answerx{
     padding: 0 0 0 20px;
