--- a/app/css/directives/general.css
+++ b/app/css/directives/general.css
@@ -30,3 +30,10 @@
 .buttonsright {
 	float:right;
 }
+.feedbackwrapper {
+	height:20px;
+	margin-bottom:10px;
+}
+.problemwrapper {
+	margin-top:30px;
+}
