--- a/app/partials/directives/ms-panel.html
+++ b/app/partials/directives/ms-panel.html
@@ -1,13 +1,13 @@
 <div>
     <div class=row-fluid>
-        <ms-expression expected={{problem}} class=span4></ms-expression>
+        <ms-expression expected={{problem}} class="span4 problemwrapper"></ms-expression>
         <div class="span8 row-fluid {{helpPanelWell}}">
-            <span ng-hide=showHelpPanel>
+           <span ng-hide=showHelpPanel>
                 <div class="span9 row-fluid">
-                    <ms-expression expected={{answer}} class=span8></ms-expression>
-                    <div class=span4>
+                	<div class="row-fluid feedbackwrapper">
                         <ms-feedback></ms-feedback>
                     </div>
+                    <ms-expression expected={{answer}} class=row-fluid></ms-expression>                   
                 </div>
                 <ms-controls data={{controls}} class=span3></ms-controls>
             </span>
