--- a/app/partials/directives/ms-panel.html
+++ b/app/partials/directives/ms-panel.html
@@ -1,13 +1,15 @@
 <div>
     <div class=row-fluid>
-        <ms-expression expected={{problem}} class="span5 problemwrapper"></ms-expression>
-        <div class="span7 row-fluid {{helpPanelWell}}">
+        <ms-expression expected={{problem}} class="span4 problemwrapper"></ms-expression>
+        <div class="span8 row-fluid {{helpPanelWell}}">
            <span ng-hide=showHelpPanel>
                 <div class="span8 row-fluid">
                 	<div class="row-fluid feedbackwrapper">
                         <ms-feedback></ms-feedback>
                     </div>
-                    <ms-expression expected={{answer}} class=row-fluid></ms-expression>                   
+                    <div class="well">
+                        <ms-expression expected={{answer}} class=row-fluid></ms-expression>    
+                    </div>               
                 </div>
                 <ms-controls data={{controls}} class=span4></ms-controls>
             </span>
