More work on <ms-cancel-fractions>.

--- a/app/partials/directives/ms-multiply-fractions.html
+++ b/app/partials/directives/ms-multiply-fractions.html
@@ -10,6 +10,8 @@
     }
 </style>
 
+<ms-expression expected={{template}}></ms-expression>
+<!--
 <table>
     <tr>
         <td class=problem><ms-expression expected={{problem}} label="problem"></ms-expression></td>
@@ -17,3 +19,4 @@
         <td><ms-expression expected={{answer}} label="answer"></ms-expression></td>
     </tr>
 </table>
+-->
