new tag \\wholepart to render a string in the position of the whole part of a fraction on the page

--- a/app/css/directives/ms-fraction.css
+++ b/app/css/directives/ms-fraction.css
@@ -24,3 +24,11 @@ div .fraction .control-group {
 .fraction tr table {
     margin:0 auto;
 }
+.mixed-no-fraction {
+	height: 3em;	
+}
+.mixed-no-fraction-span {
+	display:block;
+	height:1em;
+	padding-top:1em;
+}
