<ms-order-operations> updates its * and / symbols in the instructions.
[Fixes #60]

--- a/app/partials/directives/ms-order-operations.html
+++ b/app/partials/directives/ms-order-operations.html
@@ -14,7 +14,7 @@
         display: inline-block;
     }
 </style>
-<div class="alert alert-info">{{instructions}}</div>
+<div class="alert alert-info">{{instructions | changeSigns}}</div>
 <table>
     <tr ng-repeat="row in finished">
         <td ng-repeat="item in row">
