work on 16.4 workbook steps 4 and 5

--- a/app/css/directives/general.css
+++ b/app/css/directives/general.css
@@ -52,6 +52,9 @@ body {
     text-align: center;
 }
 
+.bottom-marg{
+    margin-bottom: 20px;
+}
 /* problem text highlight-class (blue) */
 .blue-text{
     color: #0088cc;
