--- a/app/partials/directives/ms-chart.html
+++ b/app/partials/directives/ms-chart.html
@@ -1,38 +1,3 @@
-<style type="text/css">
-
-  table.td_padding td {
-		padding-left:4px;
-		padding-right:4px;
-  }
-  .collapseTable {
-		border-collapse:collapse;
-		font-size:75%;
-  }
-  table {
-  	/*color:red;*/
-  }
-  .tr_height {
-	  	height:1.7em;
-  }
-  .tr_height_plus {
-	  	height:2em;
-  }
-  .fontWeightBold {
-	  	font-weight:bold;
-  }
-  .text_align_center {
-	  	text-align:center;
-  }
-  .border-top-2px-black {
-	  	border-top:2px solid black;
-  } 
-  .chartTable {
-		border:1px solid black; 
-		width:100px;
-		height:30px;
-  }
-</style>
-
 <span>
        <table class="collapseTable td_padding text_align_center">
             	<tr ng-show="chartTitleIn">
@@ -42,7 +7,7 @@
                 </tr>
                  <tr ng-repeat="row in chartArrayOut" ng-style="{true: {borderBottom: '2px solid black'}, false: {}}[$first]">
 			    	<td ng-repeat="col in row" class="chartTable">
-                    <span>{{col}}</span>
+                    	<span ng-bind-html-unsafe=col></span>
 					</td>
 			     </tr>
 		</table>
