--- a/app/partials/directives/ms-cancel-fractions.html
+++ b/app/partials/directives/ms-cancel-fractions.html
@@ -2,11 +2,25 @@
     ms-cancel-fractions button.cancelling {
         background: orange;
     }
-    ms-cancel-fractions .cancel {
+    ms-cancel-fractions .cancel, ms-cancel-fractions .cancel ms-string {
         text-decoration: line-through;
+        opacity: 0.8;
+        height: 24px;
+        display: block;
+        padding: 4px 0;
+    }
+    ms-cancel-fractions .cancelDenominator, ms-cancel-fractions .cancelDenominator ms-string {
+        padding: 0 0 11px 0;
+        margin: -1px 0 0 0;
     }
     ms-cancel-fractions ms-input input {
         width: 40px;
+    }
+    ms-cancel-fractions .top {
+        vertical-align: top;
+    }
+    ms-cancel-fractions .padding td {
+        height: 30px;
     }
 </style>
 
@@ -15,12 +29,17 @@
     <div ng-switch-when='cancelling'>
         <table>
             <tr>
-                <td ng-repeat="frac in fracs">
+                <td ng-repeat="frac in fracs" class=top>
                     <table>
                         <tr>
                             <td>
                                 <table class=fraction>
                                     <tr><td>
+                                        <table class=padding>
+                                            <tr ng-repeat="pad in padding($index, 'num')">
+                                                <td>&nbsp;</td>
+                                            </tr>
+                                        </table>
                                         <span ng-switch on="cancelling.num == $index">
                                             <span ng-switch-when=true>
                                                 <ms-input expected label=num></ms-input>
@@ -34,9 +53,19 @@
                                                 >{{frac[0]}}</button>
                                             </span>
                                         </span>
+                                        <span ng-switch on="hasCancelledRecord($index, 'num')">
+                                            <span ng-switch-when=true>
+                                                <ms-expression class=cancel expected="{{getCancelledRecord($index, 'num')}}"></ms-expression>
+                                            </span>
+                                        </span>
                                     </td></tr>
                                     <tr><td><hr></td></tr>
                                     <tr><td>
+                                        <span ng-switch on="hasCancelledRecord($index, 'den')">
+                                            <span ng-switch-when=true>
+                                                <ms-expression class="cancel cancelDenominator" expected="{{getCancelledRecord($index, 'den')}}"></ms-expression>
+                                            </span>
+                                        </span>
                                         <span ng-switch on="cancelling.den == $index">
                                             <span ng-switch-when=true>
                                                 <div class=cancel>{{frac[1]}}</div>
