--- a/app/partials/directives/ms-cancel-fractions.html
+++ b/app/partials/directives/ms-cancel-fractions.html
@@ -35,12 +35,7 @@
                             <td>
                                 <table class=fraction>
                                     <tr><td>
-                                        <table class=padding>
-                                            <tr ng-repeat="pad in padding($index, 'num')">
-                                                <td>&nbsp;</td>
-                                            </tr>
-                                        </table>
-                                        <span ng-switch on="cancelling.num == $index">
+                                        <span style=display:inline-block ng-switch on="cancelling.num == $index">
                                             <span ng-switch-when=true>
                                                 <ms-input expected label=num></ms-input>
                                                 <div class=cancel>{{frac[0]}}</div>
@@ -53,7 +48,7 @@
                                                 >{{frac[0]}}</button>
                                             </span>
                                         </span>
-                                        <span ng-switch on="hasCancelledRecord($index, 'num')">
+                                        <span style=display:inline-block ng-switch on="hasCancelledRecord($index, 'num')">
                                             <span ng-switch-when=true>
                                                 <ms-expression class=cancel expected="{{getCancelledRecord($index, 'num')}}"></ms-expression>
                                             </span>
@@ -61,12 +56,7 @@
                                     </td></tr>
                                     <tr><td><hr></td></tr>
                                     <tr><td>
-                                        <span ng-switch on="hasCancelledRecord($index, 'den')">
-                                            <span ng-switch-when=true>
-                                                <ms-expression class="cancel cancelDenominator" expected="{{getCancelledRecord($index, 'den')}}"></ms-expression>
-                                            </span>
-                                        </span>
-                                        <span ng-switch on="cancelling.den == $index">
+                                        <span style=display:inline-block ng-switch on="cancelling.den == $index">
                                             <span ng-switch-when=true>
                                                 <div class=cancel>{{frac[1]}}</div>
                                                 <ms-input expected label=den></ms-input>
@@ -77,6 +67,11 @@
                                                     class=btn
                                                     ng-click=cancelClick($index,'den')
                                                 >{{frac[1]}}</button>
+                                            </span>
+                                        </span>
+                                        <span style=display:inline-block ng-switch on="hasCancelledRecord($index, 'den')">
+                                            <span ng-switch-when=true>
+                                                <ms-expression class="cancel cancelDenominator" expected="{{getCancelledRecord($index, 'den')}}"></ms-expression>
                                             </span>
                                         </span>
                                     </td></tr>
