standardize layout 2A_2, adjust chart css by removing td height and width & adding padding

--- a/app/css/directives/ms-chart.css
+++ b/app/css/directives/ms-chart.css
@@ -8,8 +8,9 @@
 }
 .chartTable {
 		border:1px solid black; 
-		width:100px;
-		height:30px;
+		/*width:100px;
+		height:30px;*/
+		padding:.5em;
 }
 .collapseTable {
 		border-collapse:collapse;
