not sure who added font-size 75% to ms-chart.css collapseTable style- removed that & added note to please make a different class for that

--- a/app/css/directives/ms-chart.css
+++ b/app/css/directives/ms-chart.css
@@ -14,7 +14,7 @@
 }
 .collapseTable {
 		border-collapse:collapse;
-		font-size:75%;
+		/*font-size:75%; please create a separate class if you need border-collapse with font-size: 75%  thnx, MF*/
 }
 .fontWeightBold {
 	  	font-weight:bold;
