update 2.1 with dataUtils.build, remove styling of help text (except answer)

--- a/app/partials/directives/ms-placevalue.html
+++ b/app/partials/directives/ms-placevalue.html
@@ -15,11 +15,11 @@
         	<tr>
             	<td>
                 	<br />
-                	<span class="label_like">
+                	<span>
                     	{{helpInstructions2}}
                     </span>
                     <br /><br />
-                	<span class="label_like">
+                	<span>
                     	{{helpInstructions3}}
                     </span>
                 </td>
