--- a/app/partials/directives/ms-long-division.html
+++ b/app/partials/directives/ms-long-division.html
@@ -78,7 +78,7 @@
         <ms-expression expected={{finalAnswer}} label=finalAnswer></ms-expression>
     </span>
 </div>
-<table>
+<table class=table-collapse-separate>
     <tr>
         <td></td>
         <td class=quotient>
@@ -91,8 +91,8 @@
         </td>
     </tr>
     <tr>
-        <td class=divisor>{{divisor}}</td>
-        <td class=dividend><span ng-bind-html-unsafe="dividend | digits"></span></td>
+        <td class=divisorstyle>{{divisor}}</td>
+        <td class=dividendstyle style="padding-left:20px;"><span ng-bind-html-unsafe="dividend | digits"></span></td>
     </tr>
     <tr
         ng-repeat="step in completedSteps | hideLast:showCarry"
