convert 10.1 to dataUtils.build format- remove ms-percents-decimal-fraction.js

--- a/app/css/directives/add-subtract-multiply.css
+++ b/app/css/directives/add-subtract-multiply.css
@@ -51,7 +51,11 @@
 }
 .border-bottom-2px-black {
 	border-bottom:2px solid black;
-}    
+} 
+.border-bottom-with-padding {
+	padding-bottom: 1em;
+	border-bottom:2px solid black;
+} 
 .border-top-2px-black {
 	border-top:2px solid black;
 }
