new claen equivalent layout directive- example: \equiv{\str{leftNum}}{\str{leftDen}}{\sign{=}}{\str{rightNum}}{\str{rightDen}}

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -3,6 +3,7 @@
 @import 'directives/ms-button.css';
 @import 'directives/ms-chart.css';
 @import 'directives/ms-div-wholes.css';
+@import 'directives/ms-equiv.css';
 @import 'directives/ms-exponent.css';
 @import 'directives/ms-fraction.css';
 @import 'directives/ms-find-lcm.css';
