Fix bug in <ms-cancel-fractions>
You an now get to the second cancel step.

--- a/app/partials/directives/ms-cancel-fractions.html
+++ b/app/partials/directives/ms-cancel-fractions.html
@@ -22,6 +22,10 @@
     ms-cancel-fractions .padding td {
         height: 30px;
     }
+    ms-cancel-fractions ms-button-group {
+        margin-top: 20px;
+        display: inline-block;
+    }
 </style>
 
 <div class="alert alert-block alert-info">{{instructions}}</div>
