--- a/app/css/directives/ms-equiv.css
+++ b/app/css/directives/ms-equiv.css
@@ -1,5 +1,5 @@
 ms-equivalent table{
-    margin-bottom: 20px;
+    margin: 0 16px 20px 16px;
 }
 ms-equivalent tr td,
 ms-equivalent .fraction {
@@ -24,7 +24,7 @@ ms-equivalent tr:nth-child(3) td:nth-child(3) {
 }
 
 ms-equivalent tr:nth-child(2) td:nth-child(2) {
-    padding: 0 4px;
+    padding: 0 6px;
 }
 
 ms-equivalent ms-fraction > table {
