ms-panel.html, move "next problem" button to the right in workbook help layout; 23.2, add help to workbook steps

--- a/app/css/directives/add-subtract-multiply.css
+++ b/app/css/directives/add-subtract-multiply.css
@@ -81,6 +81,9 @@
 .large-font-size {
 	font-size:110%;
 }
+.line_through {
+	text-decoration: line-through;
+}
 .help-answer-margin-right {
 	margin-right: 50px;
 }
