--- a/app/partials/directives/ms-panel.html
+++ b/app/partials/directives/ms-panel.html
@@ -1,27 +1,20 @@
 <div>
     <div class=row-fluid>
-        <span ng-show="panelStyleWide"><ms-expression expected={{problem}} class="problemwrapper" ></ms-expression></span>
-        <span ng-hide="panelStyleWide"><ms-expression expected={{problem}} class="span4 problemwrapper" ></span>
-        <span ng-show="panelStyleWide"><br></span>
+        <ms-expression expected={{problem}} class="span4 problemwrapper"></ms-expression>
         <div class="span8 row-fluid {{helpPanelWell}}">
            <span ng-hide=showHelpPanel>
-					<div class=row-fluid ng-class="{span8: !(panelStyleWide)}">
+                <div class="span8 row-fluid">
                 	<div class="row-fluid feedbackwrapper">
                         <ms-feedback></ms-feedback>
                     </div>
                     <ms-expression expected={{answer}} class=row-fluid></ms-expression>              
                 </div>
-                <span ng-show=panelStyleWide><ms-controls data={{controls}} class=span4  style="margin-top:20px;"></ms-controls></span>
-                <span ng-hide=panelStyleWide><ms-controls data={{controls}} class=span4></ms-controls></span>
+                <ms-controls data={{controls}} class=span4></ms-controls>
             </span>
             <span ng-show=showHelpPanel class="{{helpPanelClass}}">
-                <div ng-hide="panelStyleWide">
+                <div>
                     <ms-expression expected={{helpExpression}} class=span8></ms-expression>
                     <ms-controls data='{ "nextProblem": true }' class=span4></ms-controls>
-                </div>
-                <div ng-show="panelStyleWide" class="row span12">
-                    <ms-expression expected={{helpExpression}} class='span8'></ms-expression>
-                    <ms-controls data='{ "nextProblem": true }' class='span4'></ms-controls>
                 </div>
             </span>
         </div>
