take 2, changes to panel.html for wide display, as in problem 23.2

--- a/app/css/directives/general.css
+++ b/app/css/directives/general.css
@@ -50,6 +50,12 @@ body {
 	font-size: 105%;
 	font-weight: normal;
 }
+.margin_bottom_small {
+	margin-bottom:20px;
+}
+.margin_top_small {
+	margin-top:20px;
+}
 
 /* add paddin and set width on input and select box (wb step-5 17.2 Unit Rates)*/
 .Unit-Rates {
