--- a/app/partials/directives/ms-panel.html
+++ b/app/partials/directives/ms-panel.html
@@ -1,9 +1,9 @@
 <div>
     <div class=row-fluid>
-        <span class="problemwrapper" ng-class="{span4: !(panelStyleWide)}"><ms-expression expected={{problem}}></ms-expression></span>
-        <div class="span8 row-fluid {{helpPanelWell}}" ng-class="{margin_top_small: showHelpPanel}">
+        <ms-expression expected={{problem}} class="span4 problemwrapper"></ms-expression>
+        <div class="span8 row-fluid {{helpPanelWell}}">
            <span ng-hide=showHelpPanel>
-                <div class="row-fluid" ng-class="{span8: !(panelStyleWide), margin_bottom_small: panelStyleWide}">
+                <div class="span8 row-fluid">
                 	<div class="row-fluid feedbackwrapper">
                         <ms-feedback></ms-feedback>
                     </div>
