add margin-top to help box when using pan directive with parameters 12 & 11 (\\pan{12}{11}{...} implement in 23.2

--- a/app/partials/directives/ms-panel.html
+++ b/app/partials/directives/ms-panel.html
@@ -3,7 +3,7 @@
         <div class="span{{probSpan}} problemwrapper">
             <ms-expression expected={{problem}}></ms-expression>
         </div>
-        <div class="span{{answSpan}} row-fluid {{helpPanelWell}}">
+        <div class="span{{answSpan}} row-fluid {{helpPanelWell}}" ng-class="{margin_top_small: topMarginHelpBox}">
            <span ng-hide=showHelpPanel>
                 <div class="span9 row-fluid">
                 	<div class="row-fluid feedbackwrapper">
