Layout changes to menu pages

--- a/app/partials/controllers/problemSetList.html
+++ b/app/partials/controllers/problemSetList.html
@@ -1,6 +1,6 @@
 <div class=well>
-    <ul class="nav nav-list">
-        <li class=nav-header>{{unit.title}}</li>
+    <h2 class=nav-header>{{unit.title}}</h2> 
+    <ul class="nav nav-list">     
         <span ng-repeat="problemSet in problemSets">
             <li class=divider ng-show=divide($index)></li>
             <li>
