layout changes to Breadcrumbs

--- a/app/partials/directives/ms-breadcrumbs.html
+++ b/app/partials/directives/ms-breadcrumbs.html
@@ -3,7 +3,7 @@
         <ng-switch on=$last>
             <span ng-switch-when=false>
                 <a href="{{crumb.path}}">{{crumb.title}}</a>
-                <span class=divider>/&nbsp;</span>
+                <span class=divider>&nbsp;&nbsp;/&nbsp;&nbsp;</span>
             </span>
             <span ng-switch-when=true>
                 {{crumb.title}}
