--- a/app/css/directives/ms-exponent.css
+++ b/app/css/directives/ms-exponent.css
@@ -1,3 +1,6 @@
+ms-exponent {
+	display:block;
+}
 ms-exponent ms-input label span {
     display: none;
 }
@@ -6,10 +9,11 @@ ms-exponent input {
 }
 ms-exponent ms-event-label {
     display: inline-block;
+	vertical-align:top;
 }
 ms-exponent ms-event-label:nth-of-type(2) {
     position: relative;
-    bottom: 10px;
+    top: -10px;
     -ms-transform: scale(0.8);
     -moz-transform: scale(0.8);
     -o-transform: scale(0.8);
