--- a/app/css/directives/general.css
+++ b/app/css/directives/general.css
@@ -64,6 +64,12 @@ body {
 .center-tbl table{
     margin: 0 auto;
 }
+.center {
+    margin: 0 auto 20px auto;
+}
+.pad-left {
+    padding: 0 0 0 10px;
+}
 /* add paddin and set width on input and select box (wb step-5 17.2 Unit Rates)*/
 .Unit-Rates {
     padding: 0 0 10px 20px;
