--- a/app/partials/directives/ms-order-operations.html
+++ b/app/partials/directives/ms-order-operations.html
@@ -5,7 +5,7 @@
     ms-order-operations td {
         text-align: center;
         vertical-align: top;
-        padding: 0 5px;
+        padding: 0 0;
         min-height: 20px;
     }
     ms-order-operations ms-string {
